[package]
name = "soketto"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>", "Jason Ozias <jason.g.ozias@gmail.com>"]
description = "A websocket protocol implementation."
keywords = ["websocket", "codec", "async", "futures"]
categories = ["network-programming", "asynchronous", "web-programming::websocket"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/paritytech/soketto"
edition = "2021"
rust-version = "1.71.1"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
deflate = ["flate2"]

[dependencies]
base64 = { default-features = false, features = ["alloc"], version = "0.22" }
bytes = { default-features = false, version = "1.0" }
flate2 = { default-features = false, features = ["zlib"], optional = true, version = "1.0.13" }
futures = { default-features = false, features = ["bilock", "std", "unstable"], version = "0.3.1" }
httparse = { default-features = false, features = ["std"], version = "1.3.4" }
log = { default-features = false, version = "0.4.8" }
rand = { default-features = false, features = ["std", "std_rng"], version = "0.8" }
sha1 = { default-features = false, version = "0.10" }
http = { version = "1", optional = true }

[dev-dependencies]
quickcheck = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = { version = "0.1", features = ["net"] }
http-body-util = "0.1"
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
env_logger = "0.11.1"

[[example]]
name = "hyper_server"
required-features = ["http"]
